--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  transition: 800ms;
 }
 
 body * {
@@ -66,6 +68,12 @@ ul {
 header {
   margin-bottom: 6.3rem;
   text-align: center;
+}
+
+#app>header {
+  cursor: pointer;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 h1#calendar {
